qt/network/gen_qsslconfiguration.nim

import Qt5Network_libs

{.push raises: [].}

from system/ansi_c import c_free

type
  struct_miqt_string {.used.} = object
    len: csize_t
    data: cstring

  struct_miqt_array {.used.} = object
    len: csize_t
    data: pointer

  struct_miqt_map {.used.} = object
    len: csize_t
    keys: pointer
    values: pointer

  miqt_uintptr_t {.importc: "uintptr_t", header: "stdint.h", used.} = uint
  miqt_intptr_t {.importc: "intptr_t", header: "stdint.h", used.} = int

func fromBytes(T: type string, v: openArray[byte]): string {.used.} =
  if v.len > 0:
    result = newString(v.len)
    when nimvm:
      for i, c in v:
        result[i] = cast[char](c)
    else:
      copyMem(addr result[0], unsafeAddr v[0], v.len)

const cflags = gorge("pkg-config -cflags Qt5Network")
{.compile("gen_qsslconfiguration.cpp", cflags).}


type QSslConfigurationNextProtocolNegotiationStatus* = cint
const
  QSslConfigurationNextProtocolNegotiationNone* = 0
  QSslConfigurationNextProtocolNegotiationNegotiated* = 1
  QSslConfigurationNextProtocolNegotiationUnsupported* = 2



import gen_qsslconfiguration_types
export gen_qsslconfiguration_types

import
  gen_qssl,
  gen_qsslcertificate,
  gen_qsslcipher,
  gen_qssldiffiehellmanparameters,
  gen_qsslellipticcurve,
  gen_qsslkey,
  gen_qsslsocket,
  gen_qvariant
export
  gen_qssl,
  gen_qsslcertificate,
  gen_qsslcipher,
  gen_qssldiffiehellmanparameters,
  gen_qsslellipticcurve,
  gen_qsslkey,
  gen_qsslsocket,
  gen_qvariant

type cQSslConfiguration*{.exportc: "QSslConfiguration", incompleteStruct.} = object

proc fcQSslConfiguration_new(): ptr cQSslConfiguration {.importc: "QSslConfiguration_new".}
proc fcQSslConfiguration_new2(other: pointer): ptr cQSslConfiguration {.importc: "QSslConfiguration_new2".}
proc fcQSslConfiguration_operatorAssign(self: pointer, other: pointer): void {.importc: "QSslConfiguration_operatorAssign".}
proc fcQSslConfiguration_swap(self: pointer, other: pointer): void {.importc: "QSslConfiguration_swap".}
proc fcQSslConfiguration_operatorEqual(self: pointer, other: pointer): bool {.importc: "QSslConfiguration_operatorEqual".}
proc fcQSslConfiguration_operatorNotEqual(self: pointer, other: pointer): bool {.importc: "QSslConfiguration_operatorNotEqual".}
proc fcQSslConfiguration_isNull(self: pointer, ): bool {.importc: "QSslConfiguration_isNull".}
proc fcQSslConfiguration_protocol(self: pointer, ): cint {.importc: "QSslConfiguration_protocol".}
proc fcQSslConfiguration_setProtocol(self: pointer, protocol: cint): void {.importc: "QSslConfiguration_setProtocol".}
proc fcQSslConfiguration_peerVerifyMode(self: pointer, ): cint {.importc: "QSslConfiguration_peerVerifyMode".}
proc fcQSslConfiguration_setPeerVerifyMode(self: pointer, mode: cint): void {.importc: "QSslConfiguration_setPeerVerifyMode".}
proc fcQSslConfiguration_peerVerifyDepth(self: pointer, ): cint {.importc: "QSslConfiguration_peerVerifyDepth".}
proc fcQSslConfiguration_setPeerVerifyDepth(self: pointer, depth: cint): void {.importc: "QSslConfiguration_setPeerVerifyDepth".}
proc fcQSslConfiguration_localCertificateChain(self: pointer, ): struct_miqt_array {.importc: "QSslConfiguration_localCertificateChain".}
proc fcQSslConfiguration_setLocalCertificateChain(self: pointer, localChain: struct_miqt_array): void {.importc: "QSslConfiguration_setLocalCertificateChain".}
proc fcQSslConfiguration_localCertificate(self: pointer, ): pointer {.importc: "QSslConfiguration_localCertificate".}
proc fcQSslConfiguration_setLocalCertificate(self: pointer, certificate: pointer): void {.importc: "QSslConfiguration_setLocalCertificate".}
proc fcQSslConfiguration_peerCertificate(self: pointer, ): pointer {.importc: "QSslConfiguration_peerCertificate".}
proc fcQSslConfiguration_peerCertificateChain(self: pointer, ): struct_miqt_array {.importc: "QSslConfiguration_peerCertificateChain".}
proc fcQSslConfiguration_sessionCipher(self: pointer, ): pointer {.importc: "QSslConfiguration_sessionCipher".}
proc fcQSslConfiguration_sessionProtocol(self: pointer, ): cint {.importc: "QSslConfiguration_sessionProtocol".}
proc fcQSslConfiguration_privateKey(self: pointer, ): pointer {.importc: "QSslConfiguration_privateKey".}
proc fcQSslConfiguration_setPrivateKey(self: pointer, key: pointer): void {.importc: "QSslConfiguration_setPrivateKey".}
proc fcQSslConfiguration_ciphers(self: pointer, ): struct_miqt_array {.importc: "QSslConfiguration_ciphers".}
proc fcQSslConfiguration_setCiphers(self: pointer, ciphers: struct_miqt_array): void {.importc: "QSslConfiguration_setCiphers".}
proc fcQSslConfiguration_supportedCiphers(): struct_miqt_array {.importc: "QSslConfiguration_supportedCiphers".}
proc fcQSslConfiguration_caCertificates(self: pointer, ): struct_miqt_array {.importc: "QSslConfiguration_caCertificates".}
proc fcQSslConfiguration_setCaCertificates(self: pointer, certificates: struct_miqt_array): void {.importc: "QSslConfiguration_setCaCertificates".}
proc fcQSslConfiguration_addCaCertificates(self: pointer, path: struct_miqt_string): bool {.importc: "QSslConfiguration_addCaCertificates".}
proc fcQSslConfiguration_addCaCertificate(self: pointer, certificate: pointer): void {.importc: "QSslConfiguration_addCaCertificate".}
proc fcQSslConfiguration_addCaCertificatesWithCertificates(self: pointer, certificates: struct_miqt_array): void {.importc: "QSslConfiguration_addCaCertificatesWithCertificates".}
proc fcQSslConfiguration_systemCaCertificates(): struct_miqt_array {.importc: "QSslConfiguration_systemCaCertificates".}
proc fcQSslConfiguration_setSslOption(self: pointer, option: cint, on: bool): void {.importc: "QSslConfiguration_setSslOption".}
proc fcQSslConfiguration_testSslOption(self: pointer, option: cint): bool {.importc: "QSslConfiguration_testSslOption".}
proc fcQSslConfiguration_sessionTicket(self: pointer, ): struct_miqt_string {.importc: "QSslConfiguration_sessionTicket".}
proc fcQSslConfiguration_setSessionTicket(self: pointer, sessionTicket: struct_miqt_string): void {.importc: "QSslConfiguration_setSessionTicket".}
proc fcQSslConfiguration_sessionTicketLifeTimeHint(self: pointer, ): cint {.importc: "QSslConfiguration_sessionTicketLifeTimeHint".}
proc fcQSslConfiguration_ephemeralServerKey(self: pointer, ): pointer {.importc: "QSslConfiguration_ephemeralServerKey".}
proc fcQSslConfiguration_ellipticCurves(self: pointer, ): struct_miqt_array {.importc: "QSslConfiguration_ellipticCurves".}
proc fcQSslConfiguration_setEllipticCurves(self: pointer, curves: struct_miqt_array): void {.importc: "QSslConfiguration_setEllipticCurves".}
proc fcQSslConfiguration_supportedEllipticCurves(): struct_miqt_array {.importc: "QSslConfiguration_supportedEllipticCurves".}
proc fcQSslConfiguration_preSharedKeyIdentityHint(self: pointer, ): struct_miqt_string {.importc: "QSslConfiguration_preSharedKeyIdentityHint".}
proc fcQSslConfiguration_setPreSharedKeyIdentityHint(self: pointer, hint: struct_miqt_string): void {.importc: "QSslConfiguration_setPreSharedKeyIdentityHint".}
proc fcQSslConfiguration_diffieHellmanParameters(self: pointer, ): pointer {.importc: "QSslConfiguration_diffieHellmanParameters".}
proc fcQSslConfiguration_setDiffieHellmanParameters(self: pointer, dhparams: pointer): void {.importc: "QSslConfiguration_setDiffieHellmanParameters".}
proc fcQSslConfiguration_setBackendConfigurationOption(self: pointer, name: struct_miqt_string, value: pointer): void {.importc: "QSslConfiguration_setBackendConfigurationOption".}
proc fcQSslConfiguration_setBackendConfiguration(self: pointer, ): void {.importc: "QSslConfiguration_setBackendConfiguration".}
proc fcQSslConfiguration_defaultConfiguration(): pointer {.importc: "QSslConfiguration_defaultConfiguration".}
proc fcQSslConfiguration_setDefaultConfiguration(configuration: pointer): void {.importc: "QSslConfiguration_setDefaultConfiguration".}
proc fcQSslConfiguration_dtlsCookieVerificationEnabled(self: pointer, ): bool {.importc: "QSslConfiguration_dtlsCookieVerificationEnabled".}
proc fcQSslConfiguration_setDtlsCookieVerificationEnabled(self: pointer, enable: bool): void {.importc: "QSslConfiguration_setDtlsCookieVerificationEnabled".}
proc fcQSslConfiguration_defaultDtlsConfiguration(): pointer {.importc: "QSslConfiguration_defaultDtlsConfiguration".}
proc fcQSslConfiguration_setDefaultDtlsConfiguration(configuration: pointer): void {.importc: "QSslConfiguration_setDefaultDtlsConfiguration".}
proc fcQSslConfiguration_setOcspStaplingEnabled(self: pointer, enable: bool): void {.importc: "QSslConfiguration_setOcspStaplingEnabled".}
proc fcQSslConfiguration_ocspStaplingEnabled(self: pointer, ): bool {.importc: "QSslConfiguration_ocspStaplingEnabled".}
proc fcQSslConfiguration_setAllowedNextProtocols(self: pointer, protocols: struct_miqt_array): void {.importc: "QSslConfiguration_setAllowedNextProtocols".}
proc fcQSslConfiguration_allowedNextProtocols(self: pointer, ): struct_miqt_array {.importc: "QSslConfiguration_allowedNextProtocols".}
proc fcQSslConfiguration_nextNegotiatedProtocol(self: pointer, ): struct_miqt_string {.importc: "QSslConfiguration_nextNegotiatedProtocol".}
proc fcQSslConfiguration_nextProtocolNegotiationStatus(self: pointer, ): cint {.importc: "QSslConfiguration_nextProtocolNegotiationStatus".}
proc fcQSslConfiguration_addCaCertificates2(self: pointer, path: struct_miqt_string, format: cint): bool {.importc: "QSslConfiguration_addCaCertificates2".}
proc fcQSslConfiguration_addCaCertificates3(self: pointer, path: struct_miqt_string, format: cint, syntax: cint): bool {.importc: "QSslConfiguration_addCaCertificates3".}
proc fcQSslConfiguration_delete(self: pointer) {.importc: "QSslConfiguration_delete".}


func init*(T: type QSslConfiguration, h: ptr cQSslConfiguration): QSslConfiguration =
  T(h: h)
proc create*(T: type QSslConfiguration, ): QSslConfiguration =

  QSslConfiguration.init(fcQSslConfiguration_new())
proc create*(T: type QSslConfiguration, other: QSslConfiguration): QSslConfiguration =

  QSslConfiguration.init(fcQSslConfiguration_new2(other.h))
proc operatorAssign*(self: QSslConfiguration, other: QSslConfiguration): void =

  fcQSslConfiguration_operatorAssign(self.h, other.h)

proc swap*(self: QSslConfiguration, other: QSslConfiguration): void =

  fcQSslConfiguration_swap(self.h, other.h)

proc operatorEqual*(self: QSslConfiguration, other: QSslConfiguration): bool =

  fcQSslConfiguration_operatorEqual(self.h, other.h)

proc operatorNotEqual*(self: QSslConfiguration, other: QSslConfiguration): bool =

  fcQSslConfiguration_operatorNotEqual(self.h, other.h)

proc isNull*(self: QSslConfiguration, ): bool =

  fcQSslConfiguration_isNull(self.h)

proc protocol*(self: QSslConfiguration, ): gen_qssl.QSslSslProtocol =

  gen_qssl.QSslSslProtocol(fcQSslConfiguration_protocol(self.h))

proc setProtocol*(self: QSslConfiguration, protocol: gen_qssl.QSslSslProtocol): void =

  fcQSslConfiguration_setProtocol(self.h, cint(protocol))

proc peerVerifyMode*(self: QSslConfiguration, ): gen_qsslsocket.QSslSocketPeerVerifyMode =

  gen_qsslsocket.QSslSocketPeerVerifyMode(fcQSslConfiguration_peerVerifyMode(self.h))

proc setPeerVerifyMode*(self: QSslConfiguration, mode: gen_qsslsocket.QSslSocketPeerVerifyMode): void =

  fcQSslConfiguration_setPeerVerifyMode(self.h, cint(mode))

proc peerVerifyDepth*(self: QSslConfiguration, ): cint =

  fcQSslConfiguration_peerVerifyDepth(self.h)

proc setPeerVerifyDepth*(self: QSslConfiguration, depth: cint): void =

  fcQSslConfiguration_setPeerVerifyDepth(self.h, depth)

proc localCertificateChain*(self: QSslConfiguration, ): seq[gen_qsslcertificate.QSslCertificate] =

  var v_ma = fcQSslConfiguration_localCertificateChain(self.h)
  var vx_ret = newSeq[gen_qsslcertificate.QSslCertificate](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[pointer]](v_ma.data)
  for i in 0 ..< v_ma.len:
    vx_ret[i] = gen_qsslcertificate.QSslCertificate(h: v_outCast[i])
  vx_ret

proc setLocalCertificateChain*(self: QSslConfiguration, localChain: seq[gen_qsslcertificate.QSslCertificate]): void =
